--- a/contact.html
+++ b/contact.html
@@ -225,14 +225,14 @@
 							<div class="media-body">
 							    
                                 <h2>Tunisia</h2> 
-                                <h3>63, Rue des perles El Ghazala Ariana, 2083 - TN</h3> <br>                             
+                                <h3>63, Rue des perles, El Ghazala Ariana, 2083 - TN</h3> <br>                             
 							</div>
 						</div>
 				        <div class="media contact-info">
 						    <span class="contact-info__icon"><i class="ti-home"></i></span>
 							<div class="media-body">
 								<h2>Belgium</h2>
-				                <h3>17, Avenue Adolphe Lacomblé, Schaerbeek Bruxelles,1030 - BE </h3>  			
+				                <h3>17, Avenue Adolphe Lacomblé, Schaerbeek Bruxelles,1030 - BE</h3>  			
 					        </div> 
 						</div> 
                         <div class="media contact-info">
@@ -317,7 +317,7 @@
                                 <!-- Form -->
                                 <div class="footer-form">
                                     <div id="mc_embed_signup">
-                                        <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
+                                        <form target="_blank" action="" method="get" class="subscribe_form relative mail_part" novalidate="true">
                                             <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your email address'">
                                             <div class="form-icon">
                                                 <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm">
