--- a/consulting_services_details.html
+++ b/consulting_services_details.html
@@ -78,7 +78,16 @@
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">Home</a></li>
                                                 <li><a href="about.html">About</a></li>
-                                                <li><a href="services.html">Services</a></li>
+                                            <li><a href="services.html">Services</a>
+											    <ul class="submenu">  
+                                                    <li><a href="consulting_services_details.html">Consulting Services</a></li>
+                                                    <li><a href="cloud_solutions_details.html">Cloud Solutions</a></li> 
+                                                    <li><a href="infrastructure_management_details.html">Infrastructure Management</a></li> 
+													<li><a href="enterprise_messaging_details.html">Enterprise Messaging</a></li>
+													<li><a href="cybersecurity_details.html">Cybersecurity</a></li>
+													<li><a href="data_protection_details.html">Data Protection</a></li>
+                                                </ul>
+											</li>
                                                 <li><a href="blog.html">Blog</a>
                                               <!-- <ul class="submenu">  
                                                     <li><a href="blog.html">Blog</a></li>
@@ -174,7 +183,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-6">
                         <div class="support-location-img">
-                            <img src="assets/img/gallery/about.jpeg" alt="">
+                            <img src="assets/img/gallery/consulting_services_2.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6">
