--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,16 @@
                                                 <ul id="navigation">                                                                                          
                                                     <li><a href="index.html">Home</a></li>
                                                     <li><a href="about.html">About</a></li>
-                                                    <li><a href="services.html">Services</a></li>
+                                            <li><a href="services.html">Services</a>
+											    <ul class="submenu">  
+                                                    <li><a href="consulting_services_details.html">Consulting Services</a></li>
+                                                    <li><a href="cloud_solutions_details.html">Cloud Solutions</a></li> 
+                                                    <li><a href="infrastructure_management_details.html">Infrastructure Management</a></li> 
+													<li><a href="enterprise_messaging_details.html">Enterprise Messaging</a></li>
+													<li><a href="cybersecurity_details.html">Cybersecurity</a></li>
+													<li><a href="data_protection_details.html">Data Protection</a></li>
+                                                </ul>
+											</li>
                                                     <li><a href="blog.html">Blog</a>
                                                    <!-- <ul class="submenu">  
                                                          <li><a href="blog.html">Blog</a></li>
@@ -504,7 +513,7 @@ The vulnerabilities affect Exchange Server versions 2013, 2016, and 2019, while 
                                 <!-- Form -->
                                 <div class="footer-form">
                                     <div id="mc_embed_signup">
-                                        <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
+                                        <form target="_blank" action="" method="get" class="subscribe_form relative mail_part" novalidate="true">
                                             <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your email address'">
                                             <div class="form-icon">
                                                 <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm">
