--- a/contact.html
+++ b/contact.html
@@ -237,6 +237,13 @@
                                 <h3>63, Rue des perles, El Ghazala Ariana, 2083 - TN</h3> <br>                             
 							</div>
 						</div>
+						<div class="media contact-info">
+                            <span class="contact-info__icon"><i class="ti-tablet"></i></span>
+                            <div class="media-body">
+                                <h3>+216 98 432 463</h3>
+                                <p>Mon to Fri 9am to 6pm</p>
+                            </div>
+                        </div>
 				        <div class="media contact-info">
 						    <span class="contact-info__icon"><i class="ti-home"></i></span>
 							<div class="media-body">
@@ -247,7 +254,7 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                             <div class="media-body">
-                                <h3>+216 98 432 463</h3>
+                                <h3>+32 (0)4 89 99 54 42</h3>
                                 <p>Mon to Fri 9am to 6pm</p>
                             </div>
                         </div>
