--- a/enterprise_messaging_details.html
+++ b/enterprise_messaging_details.html
@@ -185,7 +185,7 @@
                             </div>
                             <div class="support-caption">
                                 <p class="pera-top">Our expertise in Microsoft Exchange enterprise messaging and security design will bring your team to the next level.</p>
-                                <p class="mb-65">Messaging is mission critical to your business. You should be able to expect stability. Kraft Kennedy’s industry-renowned engineers design custom environments and provide ongoing support with a focus on user experience and productivity.</p>
+                                <p class="mb-65">Messaging is mission critical to your business. You should be able to expect stability. Consilium’s industry-renowned engineers design custom environments and provide ongoing support with a focus on user experience and productivity.</p>
                                 <a href="about.html" class="btn post-btn">More About Us</a>
                             </div>
                         </div>
@@ -202,7 +202,7 @@
                     <div class="cl-xl-7 col-lg-8 col-md-10">
                         <!-- Section Tittle -->
                         <div class="section-tittle mb-70">
-                            <span>THE BEST IN THE BUSINESS.</span>
+                            <span>THE BEST IN THE BUSINESS</span>
                             <h2>Our Partners</h2>
                         </div> 
                     </div>
