--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                 <div class="col-lg-12">
                     <!-- Section Tittle -->
                     <div class="section-tittle mb-70">
-                        <span>Our Top Services</span>
-                        <h2>Our Best Services</h2>
+                        <span>Technology Solutions Provider</span>
+                        <h2>Our Services</h2>
                     </div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                     <div class="right-caption">
                         <!-- Section Tittle -->
                         <div class="section-tittle section-tittle2 mb-50">
-                            <span>Our Top Services</span>
+                            <span>Our Services</span>
                             <h2>Get an expert team in your corner.</h2>
                         </div>
                         <div class="support-caption">
@@ -274,7 +274,7 @@
                     <!-- Section Tittle -->
                     <div class="section-tittle mb-70">
                         <span>See the Consilium difference</span>
-                        <p class="mb-95">We know you have a lot of choices when it comes to your trusted IT partner. <br> See why Consilium is a premier <a style="color:#236192"; <b>TECHNOLOGY SOLUTIONS PROVIDER</a> </p>
+                        <p class="mb-95">We know you have a lot of choices when it comes to your trusted IT partner. <br> See why Consilium is a premier <a style="color:#236192"; <b>TECHNOLOGY SOLUTIONS PROVIDER.</a> </p>
                     </div> 
                 </div>
             </div>
@@ -286,7 +286,7 @@
                             </div>
                         <div class="services-caption">
                             <span>Cloud Services</span>
-                            <p><a href="#">Enable business agility with cloud services</a></p>
+                            <p><a href="#">Enable business agility with cloud services.</a></p>
 							<a>Our cloud services absorb today’s business and IT challenges, you can speed up your development and transform at lower costs. You can also mitigate business risks by providing secure, responsive, high-availability infrastructure which can execute contingency plans.</a>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                             </div>
                             <div class="services-caption">
                             <span>Technical Support Services</span>
-                            <p><a href="#">Investing in Great Technical Support</a></p>
+                            <p><a href="#">Investing in Great Technical Support.</a></p>
 							<a>We build trust in our clients by aiming to deliver a personalized customer experience that is consistent with the quality of our services because we know how much that matters.</a>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                             </div>
                             <div class="services-caption">
                             <span>Collaboration Services</span>
-                            <p><a href="#">Foster collaboration with modern workplace solutions</a></p>
+                            <p><a href="#">Foster collaboration with modern workplace solutions.</a></p>
 							<a>We provide effective communication and collaboration infrastructure to improve communication in your organization.</a>
                         </div>
                     </div>
@@ -322,7 +322,7 @@
                             </div>
                             <div class="services-caption">
                             <span>Consulting Services</span>
-                            <p><a href="#">Actualize your IT capacity with our transformation consulting</a></p>
+                            <p><a href="#">Actualize your IT capacity with our transformation consulting.</a></p>
 							<a>Successfully transforming your IT ecosystem is more than softwares. You need the right people and the right processes in place to make sure that your new systems deliver the business value you’re looking for.</a>
                         </div>
                     </div>
@@ -428,17 +428,17 @@
             </div>
         </div>
     </div>
+	<h2 id="Partners"></h2>
     <!-- Coun Down End -->
     <!-- Team Start -->
 	
     <div class="team-area section-padding30"> 
 	    <div class="container">
-		<h2 id="Partners"></h2>
             <div class="row">			
 			    <div class="cl-xl-7 col-lg-8 col-md-10">				
                     <!-- Section Tittle -->					
                     <div class="section-tittle mb-70">
-					    <span>The best in the business.</span>
+					    <span>The best in the business</span>
                         <h2>Our Partners</h2>												
                     </div> 
                 </div>
