--- a/about.html
+++ b/about.html
@@ -193,8 +193,8 @@
                     <div class="cl-xl-7 col-lg-8 col-md-10">
                         <!-- Section Tittle -->
                         <div class="section-tittle mb-70">
-                            <span>Our Partners</span>
-                            <h2>The best in the business.</h2>
+                            <span>The best in the business</span>
+                            <h2>Our Partners</h2>
                         </div> 
                     </div>
                 </div>
