--- a/cybersecurity_details.html
+++ b/cybersecurity_details.html
@@ -220,6 +220,15 @@
         <div class="team-area section-padding30">
             <div class="container">
                 <div class="row">
+				    <div class="cl-xl-7 col-lg-8 col-md-10">
+                        <!-- Section Tittle -->
+                        <div class="section-tittle mb-70">
+                            <span>THE BEST IN THE BUSINESS</span>
+                            <h2>Our Partners</h2>
+                        </div> 
+                    </div>
+                </div>
+                <div class="row">
                     <!-- single Tem -->
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                         <div class="single-team mb-30">
