--- a/data_protection_details.html
+++ b/data_protection_details.html
@@ -194,7 +194,7 @@
                                 <h2>Backup & Recovery Simplified.</h2>
                             </div>
                             <div class="support-caption">
-                                <p class="pera-top">Securely backup and recover your data no matter where it lives. Consolidate disparate hardware and software components into a single management plane.</p>
+                                <p class="pera-top">Securely backup and recover your data no matter where it lives.</p>
                                 <p class="mb-65">The threat and costs of a data breach can be devastating. It’s time to say goodbye to siloed legacy solutions and introduce your organisation to modern data protection solutions.</p>
                                 <a href="about.html" class="btn post-btn">More About Us</a>
                             </div>
@@ -212,7 +212,7 @@
                     <div class="cl-xl-7 col-lg-8 col-md-10">
                         <!-- Section Tittle -->
                         <div class="section-tittle mb-70">
-                            <span>THE BEST IN THE BUSINESS.</span>
+                            <span>THE BEST IN THE BUSINESS</span>
                             <h2>Our Partners</h2>
                         </div> 
                     </div>
