--- a/infrastructure_management_details.html
+++ b/infrastructure_management_details.html
@@ -214,7 +214,7 @@
                     <div class="cl-xl-7 col-lg-8 col-md-10">
                         <!-- Section Tittle -->
                         <div class="section-tittle mb-70">
-                            <span>THE BEST IN THE BUSINESS.</span>
+                            <span>THE BEST IN THE BUSINESS</span>
                             <h2>Our Partners</h2>
                         </div> 
                     </div>
