--- a/services.html
+++ b/services.html
@@ -121,6 +121,7 @@
                         <div class="col-xl-12">
                             <div class="hero-cap hero-cap2 text-center">
                                 <h2>Our Services</h2>
+								<h2 id="Solutions"></h2>
                             </div>
                         </div>
                     </div>
@@ -135,10 +136,9 @@
                 <div class="col-lg-12">				
                     <!-- Section Tittle -->
 					                    <div class="section-tittle mb-70">
-                         <span>Our Top Services</span>
+                         <span>TECHNOLOGY SOLUTIONS PROVIDER</span>
                         <h2>Our Services</h2>
 						<p>When your to-do list is impossibly large, it means your IT needs fall by the wayside. Trust Consilium’s solutions architects and implementation engineers to execute your vision, giving your team an automatic boost from our experienced industry professionals.</p>
-						<h2 id="Solutions"></h2>
                     </div>
                 </div>
             </div>
