--- a/contact.html
+++ b/contact.html
@@ -234,7 +234,7 @@
 							<div class="media-body">
 							    
                                 <h2>Tunisia</h2> 
-                                <h3>63, Rue des perles, El Ghazala Ariana, 2083 - TN</h3> <br>                             
+                                <h3>63, Rue des perles, El Ghazala Ariana, 2083 - TN</h3>                           
 							</div>
 						</div>
 						<div class="media contact-info">
