--- a/blog2.html
+++ b/blog2.html
@@ -138,19 +138,18 @@
                         <div class="blog_left_sidebar">
                             <article class="blog_item">
                                 <div class="blog_item_img">
-                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_1.png" alt="">
+                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_6.jpg" alt="">
                                     <a href="#" class="blog_item_date">
-                                        <h3>15</h3>
-                                        <p>January</p>
+                                        <h3>24</h3>
+                                        <p>June</p>
                                     </a>
                                 </div>
 
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2>Why Multi-Factor Authentication is Important for You and Your Business</h2>
+                                        <h2>Windows 11 leak reveals new UI, Start menu, and more</h2>
                                     </a>
-                                    <p>Arguably, even strong passwords are not enough for protecting most sensitive information. Adding a second layer of protection, such as multi-factor authentication (MFA) will help keep you and your organization more secure. A true multi-factor authentication (MFA) will require at least two mechanisms from different methods. For example, an ATM card has an MFA. Your card is your first level of authentication and the second is your PIN, you can’t withdraw money without typing in your PIN. <br>
-Today, most MFA solutions can be deployed by using either apps or SMS on mobile devices running iOS or Android.  When using MFA for a website, the user puts in their password, and the MFA system responds with a unique and temporary keycode, sent either via SMS or to the MFA app on the user’s phone. The user types in the code on the website, and gains access.  The passcode expires after a set period and can’t be reused.</p>
+                                    <p>Microsoft’s upcoming Windows 11 operating system has leaked online today. After screenshots were first published at Chinese site Baidu, the entire Windows 11 OS has appeared online, complete with a new user interface, Start menu, and lots more.</p>
                           <!--      <ul class="https://www.vmware.com/products/vsphere-hypervisor.html">
                                         <li><a href="#"><i class="fa fa-user"></i>VMware vSphere Hypervisor</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -160,19 +159,23 @@ Today, most MFA solutions can be deployed by using either apps or SMS on mobile 
 
                             <article class="blog_item">
                                 <div class="blog_item_img">
-                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_2.png" alt="">
+                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_7.jpeg" alt="">
                                     <a href="#" class="blog_item_date">
-                                        <h3>02</h3>
-                                        <p>March</p>
+                                        <h3>31</h3>
+                                        <p>July</p>
                                     </a>
                                 </div>
 
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2>On-Premises Exchange Server Vulnerabilities</h2>
+                                        <h2>Microsoft Warns Skype for Business Online Ends in August</h2>
                                     </a>
-                                    <p>On March 2nd, we released several security updates for Microsoft Exchange Server to address vulnerabilities that are being used in ongoing attacks. Due to the critical nature of these vulnerabilities, we recommend that customers protect their organizations by applying the patches immediately to affected systems. <br>
-The vulnerabilities affect Exchange Server versions 2013, 2016, and 2019, while Exchange Server 2010 is also being updated for defense-in-depth purposes. Exchange Online is not affected.</p>
+                                    <p>
+Microsoft reminds now Skype for Business users that the Online service will shut down on July 31. <br> <br>
+
+The company first announced the whole thing in August 2019 and already in September of the same year, Microsoft stopped connecting new customers to the service. <br> <br>
+
+In the last two years, Microsoft has instead encouraged users to switch to Teams. The transition is said to have been completed for millions of users and currently Teams is estimated to have 145 million daily users.</p>
                           <!--      <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i>Microsoft Windows 10 Enterprise, Pro, or Education</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -182,18 +185,18 @@ The vulnerabilities affect Exchange Server versions 2013, 2016, and 2019, while 
 
                             <article class="blog_item">
                                 <div class="blog_item_img">
-                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_3.png" alt="">
+                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_8.jpg" alt="">
                                     <a href="#" class="blog_item_date">
-                                        <h3>20</h3>
-                                        <p>March</p>
+                                        <h3>09</h3>
+                                        <p>July</p>
                                     </a>
                                 </div>
 
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2>Risk Management: Why You Need a Strategy in Place</h2>
+                                        <h2>Lightweight Visio web app coming to Microsoft 365 business subscribers for free</h2>
                                     </a>
-                                    <p>Risk is a part of life. You can’t avoid it, but if you’re smart, you’ll plan for it and develop strategies to reduce the amount of risk you are facing to a manageable amount. Risk management is the process of identifying, assessing and controlling threats. Threats and risks are not interchangeable terms. A threat is anything that can exploit a vulnerability. A risk is the potential loss or damage to assets resulting from a threat exploiting a vulnerability. In other words, Risk = Threat x Vulnerability. Threats could stem from a wide variety of sources, including financial uncertainty, legal liabilities, strategic errors, accidents and natural disasters.</p>
+                                    <p>This lightweight Visio will start rolling out in July, so you have a few weeks until the costless diagram goodness is yours to enjoy. As for what you can expect in it, Microsoft says you'll get core, basic functionalities that won't detract from the appeal of the paid variants but will grant you the essential Visio experience.</p>
                            <!--     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -203,7 +206,7 @@ The vulnerabilities affect Exchange Server versions 2013, 2016, and 2019, while 
 
                             <article class="blog_item">
                                 <div class="blog_item_img">
-                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_4.png" alt="">
+                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_9.jpg" alt="">
                                     <a href="#" class="blog_item_date">
                                         <h3>14</h3>
                                         <p>Jan</p>
@@ -212,9 +215,11 @@ The vulnerabilities affect Exchange Server versions 2013, 2016, and 2019, while 
 
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2>Windows 7 End of Life</h2>
+                                        <h2>What’s new in Microsoft Edge 90 for Windows and macOS</h2>
                                     </a>
-                                    <p>Microsoft Windows 7 is going end of life (EOL) on January 14, 2020. In short, this means that Microsoft will no longer provide patches or security updates for this operating system (OS) after this date.It will also not support resolving any issues with machines on Windows 7.  This in turn means other software vendors will not support versions of their applications running on Windows 7.</p>
+                                    <p>Today, Microsoft Edge 90 is rolling out to the stable channel with several new features and improvements. In version 90, you can enable Kids mode to make the web browsing experience safer for children. According to the company, Kids mode is designed for 5-8 and 9-12 age groups. <br> <br>
+
+When Kids mode is enabled, Microsoft Edge will automatically switch to Bing SafeSearch to ensure that only friendly contents appear in search results. Likewise, tracking prevention is set to “trick” and users can also use custom browser themes, specially tailored for kids.</p>
                            <!--     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -224,18 +229,18 @@ The vulnerabilities affect Exchange Server versions 2013, 2016, and 2019, while 
 
                             <article class="blog_item">
                                 <div class="blog_item_img">
-                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_5.png" alt="">
+                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_10.jpg" alt="">
                                     <a href="#" class="blog_item_date">
                                         <h3>06</h3>
-                                        <p>Sep</p>
+                                        <p>May</p>
                                     </a>
                                 </div>
 
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2>Transitioning to Windows 10 & Office 365</h2>
+                                        <h2>Answering Europe’s Call: Storing and Processing EU Data in the EU</h2>
                                     </a>
-                                    <p>On September 6, 2018 Microsoft announced two new resources to help customers shift to the modern desktop - Desktop Analytics and Desktop App Assure.Desktop Analytics is a new service designed to create an inventory of apps running in the organization, assess app compatibility with the latest feature updates of Windows 10 and Office 365 ProPlus.</p>
+                                    <p>Today we are announcing a new pledge for the European Union. If you are a commercial or public sector customer in the EU, we will go beyond our existing data storage commitments and enable you to process and store all your data in the EU. In other words, we will not need to move your data outside the EU. This commitment will apply across all of Microsoft’s core cloud services – Azure, Microsoft 365, and Dynamics 365. We are beginning work immediately on this added step, and we will complete by the end of next year the implementation of all engineering work needed to execute on it. We’re calling this plan the EU Data Boundary for the Microsoft Cloud.</p>
                            <!--     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
